Changelog
=========

0.9.9 (unreleased)
------------------


0.9.8 (2011-07-21)
------------------

- Replace several untranslatable strings.
  [pfurman]

- Fixed compatibility with Plone 4.1 by (conditionally) loading the
  permissions.zcml from CMFCore.  (Still works on Plone 3.3 and 4.0
  too.)
  [maurits]

- Link to new manual.
  [nouri]

0.9.7 (2011-02-23)
------------------

- Support acquisition-wrapped channel; the possible wrapping of the
  channel object is particularly important with subscriptions since
  the ``five.intid`` utility is used to track them and has delicate
  code to avoid acquisition "loops".
  [malthe]

- Fixed issue that allowed an anonymous user to confirm a random
  subscriber from a channel for which the standard confirm view is
  exposed.
  [malthe]

0.9.6 (2011-02-10)
------------------

- Fixed critical issue that allowed an anonymous user to unsubscribe a
  random subscriber from a channel for which the standard unsubscribe
  view is exposed.
  [malthe]

- Fixed unclosed input tag for including the hidden secret.
  [maurits]

0.9.5 (2010-12-26)
------------------

- Updated the patched `queryCatalog` method of the collection class with
  changes from the baseline.
  [hannosch]

0.9.4 (2010-12-03)
------------------

- Fixed release.

0.9.3 (2010-12-03)
------------------

- Added configuration setting for ``keep_sent_messages`` (new in
  ``collective.singing`` 0.7.1).
  [malthe]

- Fixed CSV Download view for not to break on composers that include list,
  boolean and datetime fields.
  [piv]

- Documentation updates.  [saily]

- Added italian translation, thanks to Augusto Sosa.  [saily]

- Update French translation to reflect change of channel to mailing list
  [toutpt]

0.9.2 (2010-11-04)
------------------

- Documentation updates.   [saily]

- Fixed the stub mailer (encoding issue). [malthe]

0.9.1 (2010-11-04)
------------------

- Fixed the stub mailer (how it ever could work is unclear). [malthe]
