@@ -21,7 +21,9 @@ import collective.singing.interfaces
 import collective.singing.message
 import collective.singing.browser.subscribe
 from collective.singing.channel import channel_lookup
+
 from collective.dancing import MessageFactory as _
+from collective.dancing.utils import switch_on
 
 
 class SubscribeForm(collective.singing.browser.subscribe.Subscribe):
@@ -46,7 +48,7 @@ class SendSecret(BrowserView):
         return form()
 
     def __call__(self):
-        z2.switch_on(self)
+        switch_on(self)
         return self.template()
 
     def contents(self):
@@ -78,8 +80,8 @@ class Subscribe(BrowserView):
                  mapping={'channel': self.context.Title()})
 
     def __call__(self):
-        z2.switch_on(self,
-                     request_layer=collective.singing.interfaces.IFormLayer)
+        switch_on(self,
+                  request_layer=collective.singing.interfaces.IFormLayer)
         return self.template()
 
     def contents(self):
@@ -756,8 +758,8 @@ class Subscriptions(BrowserView):
         return secret
 
     def contents(self):
-        z2.switch_on(self,
-                     request_layer=collective.singing.interfaces.IFormLayer)
+        switch_on(self,
+                  request_layer=collective.singing.interfaces.IFormLayer)
         subscriptions, channels = self._subscriptions_and_channels(self.secret)
 
         if self.single_form_subscriptions:
