@@ -34,7 +34,7 @@ setup(name='collective.dancing',
           'setuptools',
           'collective.singing>=0.7.1',
           'plone.z3cform>=0.5.1',
-          'plone.app.z3cform>=0.4.2',
+          'plone.app.z3cform>=0.5',
           'five.intid',
           'zc.lockfile',
           'StoneageHTML',
