@@ -4,7 +4,7 @@ extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
 
 package-name = collective.dancing
-auto-checkout=
+auto-checkout =
     collective.singing
 
 [sources]
@@ -14,13 +14,10 @@ collective.singing = svn https://svn.plone.org/svn/collective/collective.singing
 z3c.form = 2.2.0
 zope.testbrowser = 3.9.0
 mechanize=0.2.1
-BeautifulSoup = 3.0.8.1
+BeautifulSoup = 3.2.0
 cssutils = 0.9.7b3
-collective.monkeypatcher = 1.0b2
 collective.z3cform.datetimewidget = 0.1a9
 five.intid = 0.5.1
-plone.app.z3cform = 0.4.9
-plone.z3cform = 0.5.10
 StoneageHTML = 0.2.1
 z3c.batching = 1.1.0
 z3c.formwidget.query = 0.5
